# saferustcl_suite

./: Cargo.toml  TO DO.txt  memtrace_abort.csv  memtrace_summary.txt  run_baseline.ps1
crates/hpc-core/: Cargo.toml
crates/hpc-core/examples/: stm_abort.rs  vec_add.rs
crates/hpc-core/results/FGOS/seed1/: summary_matrix.tsv
crates/hpc-core/results/FGOS/seed1/high/t2/: memtrace_abort.csv
crates/hpc-core/results/FGOS/seed1/high/t4/: memtrace_abort.csv
crates/hpc-core/results/FGOS/seed1/high/t8/: memtrace_abort.csv
crates/hpc-core/results/FGOS/seed1/low/t2/: memtrace_abort.csv
crates/hpc-core/results/FGOS/seed1/low/t4/: memtrace_abort.csv  memtrace_summary.txt
crates/hpc-core/results/FGOS/seed1/low/t8/: memtrace_abort.csv
crates/hpc-core/results/FGOS/seed1/med/t2/: memtrace_abort.csv  memtrace_summary.txt
crates/hpc-core/results/FGOS/seed1/med/t4/: memtrace_abort.csv
crates/hpc-core/results/FGOS/seed1/med/t8/: memtrace_abort.csv  memtrace_summary.txt
crates/hpc-core/src/: lib.rs  metrics.rs
crates/hpc-core/src/buffer/: mod.rs  state.rs
crates/hpc-core/src/memtracer/: mod.rs
crates/hpc-core/src/metrics/: mod.rs
docs/: Messungen.txt  SUMMARY.md  Tagesarbeit 13.08.txt
results/FGOS/seed1/: summary_matrix.tsv  summary_rates.tsv
results/FGOS/seed1/high/t2/: memtrace_abort.csv  memtrace_summary.txt
results/FGOS/seed1/high/t4/: memtrace_abort.csv  memtrace_summary.txt
results/FGOS/seed1/high/t8/: memtrace_abort.csv  memtrace_summary.txt
results/FGOS/seed1/transfer/: memtrace.csv  memtrace_abort.csv  memtrace_summary.txt
(+10 files in other folders)
